--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
   
   
 install:
-  - pip install -r requirements.txt
+  - Flask         1.0.2
+  - Flask-RESTful 0.3.6
   
 script: python api.py
